# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Chip8.cpp.C10AB75498C93DB8.idx  Chip8.h.0C89C8C66EA14AB3.idx  Display.cpp.86FE107452ED1568.idx  Display.h.A4F7CF51DD438194.idx  SDL.c.296934AF22C29619.idx  SDL.h.370B242C6120A187.idx  SDL_RLEaccel.c.CE7CFAE456E39E6C.idx  SDL_RLEaccel_c.h.823150B3868E0E67.idx  SDL_alsa_audio.c.068505C98D645563.idx  SDL_alsa_audio.h.B60620CBA2115F6E.idx  SDL_appid.c.36F06B5089FB5F16.idx  SDL_appid.h.D279C7D307473085.idx  SDL_assert.c.381210D2179767AE.idx  SDL_assert.h.C95EA799BD80CB17.idx  SDL_assert_c.h.AB7D1C3FFE44748B.idx  SDL_asyncio.c.9B9246BDE1430BDA.idx  SDL_asyncio.h.5E8FD92D65E769E7.idx  SDL_asyncio_c.h.272AC57FDA91C474.idx  SDL_asyncio_generic.c.5A89EB20CFDDBC84.idx  SDL_atomic.c.23A298D45902E47E.idx  SDL_atomic.h.CD967848026F590C.idx  SDL_audio.c.6483DF540C3755E5.idx  SDL_audio.h.6858DA889DFB96F0.idx  SDL_audio_c.h.0206E0613EC35CDE.idx  SDL_audio_channel_converters.h.F699F961F7926E16.idx  SDL_audiocvt.c.870C050B734BFE5A.idx  SDL_audiodev.c.8910028C6BED51A0.idx  SDL_audioqueue.c.2154E24EC590665D.idx  SDL_audioqueue.h.7DB4550B5606CE27.idx  SDL_audioresample.c.E615C869779E7ABF.idx  SDL_audioresample.h.3CA9F19FA9547F1E.idx  SDL_audiotypecvt.c.8D02847ED4622775.idx  SDL_begin_code.h.377BBEB0E849B217.idx  SDL_bits.h.A4105B9D10CC67BE.idx  SDL_blendfillrect.c.297785CEB6AF9D6B.idx  SDL_blendline.c.7413B44FB4694F41.idx  (+584 more)
.github/workflows/: cmake-multi-platform.yml
src/: Chip8.cpp  Chip8.h  Display.cpp  Display.h  main.cpp
